--- a/table.html
+++ b/table.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <header>
+    <head>
         <title>My Webpage!</title>
-    </header>
-</head>
-<body>
-    <table>
-        <tr>
-            <th>First name</th>
-            <th>Last name</th>
-            <th>Years in office</th>
-        </tr>
-        <tr>
-            <td>George</td>
-            <td>Washington</td>
-            <td>1789-1797</td>
-        </tr>
-        <tr>
-            <td>John</td>
-            <td>Adam</td>
-            <td>1797-1801</td>
-        </tr>
-        <tr>
-            <td>Thomas</td>
-            <td>Jefferson</td>
-            <td>1801-1809</td>
-        </tr>
-    </table>
-</body>
+        <style>
+            table{
+                border: 2px solid black;
+            }
+            th,td{
+                border: 1px solid black;
+            }
+        </style>
+    </head>
+    <body>
+        <table>
+            <tr>
+                <th>First name</th>
+                <th>Last name</th>
+                <th>Years in office</th>
+            </tr>
+            <tr>
+                <td>George</td>
+                <td>Washington</td>
+                <td>1789-1797</td>
+            </tr>
+            <tr>
+                <td>John</td>
+                <td>Adam</td>
+                <td>1797-1801</td>
+            </tr>
+            <tr>
+                <td>Thomas</td>
+                <td>Jefferson</td>
+                <td>1801-1809</td>
+            </tr>
+        </table>
+    </body>
 </html>
